before applying operatprs

--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -29,13 +29,13 @@
                     <td><button id="four" class="number button" type="button">4</button></td>
                     <td><button id="five" class="number button" type="button">5</button></td>
                     <td><button id="six" class="number button" type="button">6</button></td>
-                    <td><button id="minus" class="operation button" type="button">-</button></td>
+                    <td><button id="subtract" class="operation button" type="button">-</button></td>
                 </tr>
                 <tr>
                     <td><button id="one" class="number button" type="button">1</button></td>
                     <td><button id="two" class="number button" type="button">2</button></td>
                     <td><button id="three" class="number button" type="button">3</button></td>
-                    <td><button id="plus" class="operation button" type="button">+</button></td>
+                    <td><button id="add" class="operation button" type="button">+</button></td>
                 </tr>
                 <tr>
                     <td colspan="2"><button id="zero" class="number button" type="button">0</button></td>
