--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -40,7 +40,7 @@
                 <tr>
                     <td colspan="2"><button id="zero" class="number button" type="button">0</button></td>
                     <td><button id="point" class="button" type="button">.</button></td>
-                    <td><button id="equal" class="operation button" type="button">=</button></td>
+                    <td><button id="equal" class="button" type="button">=</button></td>
                 </tr>
             </table>
         </div>
